--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/app.css" />
     <title>IMC</title>
-</head>
+  </head>
 
-<body>
-    <div>ITEM 1</div>
-    <div class="flex flex-column">
-        <div>ITEM 2.1</div>
-        <div>ITEM 2.2</div>
-        <div>ITEM 2.3</div>
-    </div>
-    <div>
-        <input class="input" type="text" />
-    </div>
-    <div>ITEM 4</div>
-    <div>ITEM 5</div>
-    <div>ITEM 6</div>
-</body>
+  <body>
+    <div class="Conteudo">
+      <div id="IMC">Cálculo de IMC</div>
 
+      <div class="Agrupamento-inputs">
+        <input type="text" placeholder="Altura" />
+        <input type="text" placeholder="Peso" />
+        <input type="text" placeholder="Sexo" />
+      </div>
+
+      <div class="checkbox">
+        <input type="checkbox" /> Eu tenho 65 anos ou mais
+      </div>
+
+      <div class="agrupamento-botoes">
+        <button type="button" id="Calcular">Calcular meu IMC</button>
+
+        <button type="button" id="Entenda">Entenda o cálculo</button>
+      </div>
+    </div>
+  </body>
 </html>
