HTML e CSS das telas finalizado

--- a/relembre-login.html
+++ b/relembre-login.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
-    <title> Relembre seu login </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/app.css" />
+    <title>Relembre seu login</title>
+  </head>
+  <body>
     <div class="conteudo-relembreSenha">
-        <div class="conteudo-relembreSenha-agrupamento">
-
+      <div class="conteudo-relembreSenha-agrupamento">
         <div class="logo-login">
-            <div class="margem-imagem-login">
-                <img src="assets/icon-no-bg.png" id="imagem-login">
-            </div>
+          <div class="margem-imagem-login">
+            <img src="assets/icon-no-bg.png" id="imagem-login" />
+          </div>
         </div>
 
         <div class="relembre-login">
-            <label id="label-relembre-login"> Relembre seu Login </label>
+          <label id="label-relembre-login"> Relembre seu Login </label>
 
-            <p id="relembre-recupere-login"> Recupere seu acesso antes de fazer o cálculo IMC  </p>
+          <p id="relembre-recupere-login">
+            Recupere seu acesso antes de fazer o cálculo IMC
+          </p>
         </div>
 
         <div class="Agrupamento-inputs-relembreLogin">
-            <input type="text" placeholder="Seu e-mail"> 
+          <input type="text" placeholder="Seu e-mail" />
         </div>
 
         <div class="checkbox-CriarConta">
-            <input type="checkbox"> Não sou um robô
+          <input type="checkbox" /> Não sou um robô
         </div>
 
         <div class="agrupamento-botoes-login">
-            <button type="button" id="Calcular"> Recuperar Login </button>
-            
-            <button type="button" id="Entenda"> Não tenho um acesso </button>
+          <button type="button" id="Calcular">Recuperar Login</button>
+
+          <button type="button" id="Entenda">Não tenho um acesso</button>
         </div>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
