--- a/sobrepeso.html
+++ b/sobrepeso.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
-    <title> SobrePeso </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/app.css" />
+    <title>SobrePeso</title>
+  </head>
+  <body>
     <div class="conteudo-parabens">
-        <div class="conteudo-parabens-agrupamento">
-
+      <div class="conteudo-parabens-agrupamento">
         <div class="logo-login">
-            <div class="margem-imagem-login">
-                <img src="assets/icon-no-bg.png" id="imagem-login">
-            </div>
+          <div class="margem-imagem-login">
+            <img src="assets/icon-no-bg.png" id="imagem-login" />
+          </div>
         </div>
 
         <div class="relembre-login">
-            <label id="label-relembre-login"> ⛔ Sobrepeso </label>
+          <label id="label-relembre-login"> ⛔ Sobrepeso </label>
 
-            <p id="sobrepeso-descricao"> Cuidado você está com sobrepeso,  dê uma atenção para sua saúde  </p>
+          <p id="sobrepeso-descricao">
+            Cuidado você está com sobrepeso, dê uma atenção para sua saúde
+          </p>
         </div>
 
         <div class="agrupamento-botoes-parabens">
-            <button type="button" id="Calcular"> Registar medidas </button>
-            
-            <button type="button" id="Entenda"> Ver meu histórico </button>
+          <button type="button" id="Calcular">Registar medidas</button>
+
+          <button type="button" id="Entenda">Ver meu histórico</button>
         </div>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
